Undo overflow fix

--- a/client/components/styles.module.css
+++ b/client/components/styles.module.css
@@ -1,7 +1,6 @@
 body {
   margin: 0px;
   max-width: 100%;
-  overflow-x: hidden;
 }
 
 html .navbar {
